Updated basic-nginx configuration

--- a/basic-nginx.conf
+++ b/basic-nginx.conf
@@ -6,10 +6,10 @@ events {
 http {
     server {
         listen 80;
-        server_name be1.100xdevs.com;
+        server_name ip/domain;
 
         location / {
-            proxy_pass http://localhost:8080; # Forward requests to the backend server.
+            proxy_pass http://localhost:{port}; # Forward requests to the backend server.
             proxy_http_version 1.1;          # Use HTTP/1.1 for better compatibility.
 
             # Preserve important headers.
