Sign up and Login implemented

--- a/advance-nginx.conf
+++ b/advance-nginx.conf
@@ -9,8 +9,11 @@ server {
 
     # SSL configuration
     # Specifies the paths to your SSL certificate and private key files.
-    ssl_certificate /etc/ssl/certs/example.com.crt;
-    ssl_certificate_key /etc/ssl/private/example.com.key;
+    # SSL certificate configurations (managed by Certbot)
+    ssl_certificate /etc/letsencrypt/live/domain_name/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/domain_name/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # SSL protocol and settings to ensure strong security.
     ssl_protocols TLSv1.2 TLSv1.3; # Use only secure protocols
@@ -72,7 +75,12 @@ server {
     server_name example.com;
 
     # Redirect all HTTP requests to HTTPS (port 443).
-    return 301 https://$host$request_uri;
+    if ($host = visitor-management-system.in) {
+        return 301 https://$host$request_uri;
+    }
+
+    # Default response for any other requests
+    return 404;  # Return 404 if the request doesn't match the domain
 }
 
 # Define an upstream block for load balancing between multiple backend servers.
